--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
      color: black;
      border-color: white;
  }
+ td{
+     text-align: center;
+ }
     @media only screen and (max-width: 600px) {
         .drp-down{
             margin-left: 1rem;
