--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     .navbar{
         justify-content: flex-start !important;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
     }
     .size{
         font-size: 1.25rem;
