--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
           background-image: url('output-0.png');
           background-position: center;
           background-size: cover;
-          height: 48px;
-          width: 62px;
+          height: 42px;
+          width: 34px;;
+      }
+      .nav-design{
+          display: flex;
+          margin-bottom: 3px;
       }
       .drp-down {
         display: flex;
@@ -137,12 +141,18 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.09);
     justify-content: center;
       }
       .table-style {
-        margin-top: 10rem;
+        margin-top: 0rem;
       }
       .table-style > p:first-child {
         background-color: rgb(90, 98, 105);
         font-size: 0.725rem;
         color: white;
+        width: 35%;
+        height: 2rem;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
       thead {
         background-color:rgb(90, 98, 105);
@@ -332,6 +342,14 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.09);
       .select-display {
         margin-left: -165px;
       }
+      .right-text {
+    
+    right: 1rem;
+    
+}
+.left-text{
+    left: 4rem;
+}
       } 
     </style>
   </head>
