--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@ document.querySelector('#show').style.display= "block";
               onclick="myfunc()"
             >
               <option value="pie">PILPRES </option>
-              <option value="bar">PILEG DPR</option>
-              <option value="pileg">PILEG DPRD PROVINSI</option>
+              <option value="pie">PILEG DPR</option>
+              <option value="pi">PILEG DPRD PROVINSI</option>
               <option value="kota">PILEG DPRd KAB/KOTA</option>
               <option>PEMILU DPD</option>
             </select>
