--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@
           <!-- <span class="input-icon"><i class="fas fa-times"></i></span> -->
           <select class="form-control" id="exampleFormControlSelect1" onclick="myfunc()">
             <option value="pie">PILPRES </option>
-            <option value="pie">PILEG DPR</option>
-            <option value="pileg">PILEG DPRD PROVINSI</option>
-            <option value="kota">PILEG DPRd KAB/KOTA</option>
+            <option value="bar">PILEG DPR</option>
+            <option value="line">PILEG DPRD PROVINSI</option>
+            <option value="circle">PILEG DPRd KAB/KOTA</option>
             <option>PEMILU DPD</option>
           </select>
         </div>
