--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
             <option value="pie">PILPRES </option>
             <option value="bar">PILEG DPR</option>
             <option value="line">PILEG DPRD PROVINSI</option>
-            <option value="circle">PILEG DPRd KAB/KOTA</option>
-            <option>PEMILU DPD</option>
+            <option value="doughnut">PILEG DPRd KAB/KOTA</option>
+            <option value="radar" >PEMILU DPD</option>
           </select>
         </div>
         <script>
@@ -669,9 +669,9 @@
       <p> RI 2019</p>
     </div>
     <p>TINGKAT NASIONAL</p>
-    <p>
+    <!-- <p>
       Versi: 14 May 2019 19:00:05 Progress: 665.431 dari 813.350 TPS (81.81361%)
-    </p>
+    </p> -->
     <div class="con-size">
       <canvas id="myChart"></canvas>
       <span class="left-text">
