--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
             <option value="bar">PILEG DPR</option>
             <option value="line">PILEG DPRD PROVINSI</option>
             <option value="doughnut">PILEG DPRd KAB/KOTA</option>
-            <option value="radar" >PEMILU DPD</option>
+            <option value="polarArea" >PEMILU DPD</option>
           </select>
         </div>
         <script>
