--- a/index.html
+++ b/index.html
@@ -555,7 +555,8 @@
             <option value="bar">PILEG DPR</option>
             <option value="line">PILEG DPRD PROVINSI</option>
             <option value="doughnut">PILEG DPRd KAB/KOTA</option>
-            <option value="polarArea" >PEMILU DPD</option>
+            <option value="polarArea"
+             >PEMILU DPD</option>
           </select>
         </div>
         <script>
@@ -732,7 +733,7 @@
           //   },
           {
             // label: "# of Votes",
-            data: [18, 19],
+            data: [12, 19],
             backgroundColor: ["rgb(142, 214, 255)", "rgb(255, 227, 176)"],
 
           }
