--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                          </div>
                                                         `;
             }
-            if (strUser === "pileg" || strUser === "kota") {
+            if (strUser === "doughnut" || strUser === "polarArea") {
               // document.getElementById('form-three').style.display="none";
               document.getElementById("one").innerHTML = `
                                                    <div class="select-display-one ">
